--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "core-js": "^3.6.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular-devkit/core": "^14.0.6",
-    "@angular/animations": "^14.0.6",
-    "@angular/cdk": "^14.0.5",
-    "@angular/cli": "^14.0.6",
-    "@angular/common": "^14.0.6",
-    "@angular/compiler": "^14.0.6",
-    "@angular/compiler-cli": "^14.0.6",
-    "@angular/core": "^14.0.6",
-    "@angular/forms": "^14.0.6",
-    "@angular/language-service": "^14.0.6",
-    "@angular/material": "^14.0.5",
-    "@angular/platform-browser": "^14.0.6",
-    "@angular/platform-browser-dynamic": "^14.0.6",
-    "@angular/router": "^14.0.6",
+    "@angular-devkit/build-angular": "^15.1.6",
+    "@angular-devkit/core": "^15.1.6",
+    "@angular/animations": "^15.1.5",
+    "@angular/cdk": "^15.1.4",
+    "@angular/cli": "^15.1.5",
+    "@angular/common": "^15.1.5",
+    "@angular/compiler": "^15.1.5",
+    "@angular/compiler-cli": "^15.1.5",
+    "@angular/core": "^15.1.5",
+    "@angular/forms": "^15.1.5",
+    "@angular/language-service": "^15.1.5",
+    "@angular/material": "^15.1.4",
+    "@angular/platform-browser": "^15.1.5",
+    "@angular/platform-browser-dynamic": "^15.1.5",
+    "@angular/router": "^15.1.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.2",
     "@types/tinycolor2": "^1.4.2",
-    "angular-cli-ghpages": "^1.0.0-rc.2",
+    "angular-cli-ghpages": "^1.0.5",
     "codelyzer": "^6.0.0",
     "conventional-changelog": "^3.1.23",
     "core-js": "^3.6.4",
@@ -54,15 +54,15 @@
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^14.0.3",
+    "ng-packagr": "^15.2.1",
     "protractor": "~7.0.0",
     "rxjs": "^6.6.3",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.7.4",
+    "typescript": "^4.9.5",
     "uglify-es": "^3.3.9",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.8"
   },
   "config": {
     "validate-commit-msg": {
@@ -92,7 +92,9 @@
   },
   "dependencies": {
     "@thebespokepixel/es-tinycolor": "^2.1.1",
-    "tslib": "^2.3.0"
+    "minimist": ">=0.2.1 <1.0.0 || >=1.2.3",
+    "tslib": "^2.3.0",
+    "yargs-parser": ">=13.1.2 <14.0.0 || >=15.0.1 <16.0.0 || >=18.1.2"
   },
   "resolutions": {
     "**/**/minimist": ">=0.2.1 <1.0.0 || >=1.2.3",
